backend/prod/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: lms-backend-deployment

  labels:
    app: lms-backend
    tier: backend

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  selector:
    matchLabels:
      app: lms-backend

  template:
    metadata:
      labels:
        app: lms-backend

    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - web

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100

              podAffinityTerm:
                topologyKey: kubernetes.io/hostname

                labelSelector:
                  matchLabels:
                    app: lms-backend

      containers:
        - name: lms-backend

          image: lms-backend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000

            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "500m"

      restartPolicy: Always
