backend/prod/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: lms-backend-deployment

  labels:
    app: lms-backend
    tier: backend

spec:
  replicas: 1

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  selector:
    matchLabels:
      app: lms-backend

  template:
    metadata:
      labels:
        app: lms-backend

    spec:
      nodeSelector:
        role: control-plane
        
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100

              podAffinityTerm:
                topologyKey: kubernetes.io/hostname

                labelSelector:
                  matchLabels:
                    app: lms-backend

      containers:
        - name: lms-backend

          image: backend-image
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          startupProbe:
            httpGet:
              path: /health/
              port: 8000
            failureThreshold: 30
            periodSeconds: 5
            
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 5

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "500m"
