backend/prod/backend/service.yml
apiVersion: v1
kind: Service

metadata:
  name: lms-backend-service

spec:
  type: ClusterIP

  selector:
    app: lms-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
