backend/prod/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: lms-backend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "100"

spec:
  ingressClassName: traefik

  rules:
    # - host: website-project.uz
    - http:
        paths:
        - path: /api
           pathType: Prefix
              backend:
                service:
                  name: lms-backend-service
                  port:
                    number: 80
